@@ -32,7 +32,7 @@ public record BreakingChange(
 			}
 		}
 
-		String relativeFile = clone.toAbsolutePath().relativize(Paths.get(file).toAbsolutePath()).toString();
+		String relativeFile = clone.toAbsolutePath().relativize(Path.of(file).toAbsolutePath()).toString();
 		return new BreakingChange(
 			SpoonHelpers.fullyQualifiedName(decl.getReference()),
 			decl.getChange().name(),
