@@ -6,7 +6,7 @@ import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -38,10 +38,10 @@ class MaracasReportTests {
 	@BeforeEach
 	void setUp() {
 		LibraryJar v1 = new LibraryJar(
-			Paths.get("../test-data/comp-changes/old/target/comp-changes-old-0.0.1.jar"),
-			new SourcesDirectory(Paths.get("../test-data/comp-changes/old/")));
-		LibraryJar v2 = new LibraryJar(Paths.get("../test-data/comp-changes/new/target/comp-changes-new-0.0.1.jar"));
-		SourcesDirectory c1 = new SourcesDirectory(Paths.get("../test-data/comp-changes/client/"));
+			Path.of("../test-data/comp-changes/old/target/comp-changes-old-0.0.1.jar"),
+			new SourcesDirectory(Path.of("../test-data/comp-changes/old/")));
+		LibraryJar v2 = new LibraryJar(Path.of("../test-data/comp-changes/new/target/comp-changes-new-0.0.1.jar"));
+		SourcesDirectory c1 = new SourcesDirectory(Path.of("../test-data/comp-changes/client/"));
 
 		AnalysisQuery query = AnalysisQuery.builder()
 			.oldVersion(v1)
@@ -55,7 +55,7 @@ class MaracasReportTests {
 		Repository clientRepo = forge.fetchRepository("alien-tools", "comp-changes-client");
 
 		report = new MaracasReport(
-			Delta.fromMaracasDelta(result.delta(), pr, Paths.get("../test-data/comp-changes/old/")),
+			Delta.fromMaracasDelta(result.delta(), pr, Path.of("../test-data/comp-changes/old/")),
 			List.of(ClientReport.success("alien-tools/comp-changes-client",
 				result.allBrokenUses()
 					.stream()
